<resources>
    <string name="app_name">QPM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email_login">usuario</string>
    <string name="hint_password_login">password</string>
    <string name="btn_login">Ingresar</string>
    <string name="hugo_valdiviezo">Hugo Valdiviezo</string>
    <string name="operario">Operario</string>
    <string name="registrar_transferencia_de_larvas">Transferencia de Larvas</string>
    <string name="sanitario">Sanitario</string>
    <string name="miel">Miel</string>
    <string name="celdas_reales">Celdas Reales</string>
    <string name="ingrese_el_n_de_colmena">Ingrese el Nº de Colmena</string>
    <string name="fecha">Fecha: </string>
    <string name="colmena">Nº Colmena: </string>
    <string name="tarea">Tarea:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="trans_larvas">Transferencia de Larvas</string>
    <string name="informaci_n_de_la_tarea">Información de la Tarea</string>
    <string name="seleccione_colmena">Seleccione Colmena</string>


    <string-array name="subjects">
        <item>Colmena 1</item>
        <item>Colmena 2</item>
        <item>Colmena 3</item>
        <item>Colmena 4</item>
    </string-array>

    <string name="subject_label">Subject</string>
    <string name="tarea_de_producci_n">Tareas de Producción</string>
    <string name="title">titulo</string>

</resources>
